src/objects/Classification__c.object
<CustomObject>
    <fields>
        <fullName>ClassificationNo__c</fullName>
        <externalId>true</externalId>
        <label>ClassificationNo</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rowguid__c</fullName>
        <label>Rowguid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Classification</label>
    <nameField>
        <label>Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>